--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.13",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-validation": "^4.1.0",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.2.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.0",
