--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -13,6 +13,9 @@
 
 # misc
 .DS_Store
+.env
+../.env
+./.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +24,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
