--- a/backend/package.json
+++ b/backend/package.json
@@ -15,15 +15,26 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.13",
+    "@types/validator": "^13.7.15",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "concurrently": "^8.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "nodemon": "^2.0.22",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.0",
+    "sequelize-typescript": "^2.1.5",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
